force-app/main/default/objects/Custodial_Exception__c/Custodial_Exception__c.object-meta.xml
<CustomObject>
    <label>Custodial Exception</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Custodial Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custodial Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>