force-app/main/default/objects/Custodial_Exception__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Custodian Property Address</label>
    <type>TextArea</type>
</CustomField>