force-app/main/default/objects/Custodial_Exception__c/fields/Borrower_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Name__c</fullName>
    <label>Custodian Borrower Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>