force-app/main/default/objects/Custodial_Exception__c/fields/CollateralId__c.field-meta.xml
<CustomField>
    <fullName>CollateralId__c</fullName>
    <label>CollateralId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>