force-app/main/default/objects/Custodial_Exception__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Custodial Exceptions</relationshipLabel>
    <relationshipName>Custodial_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>