force-app/main/default/objects/Custodial_Exception__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1003</fullName>
            </value>
            <value>
                <fullName>1008</fullName>
            </value>
            <value>
                <fullName>1088</fullName>
            </value>
            <value>
                <fullName>1994</fullName>
            </value>
            <value>
                <fullName>1995</fullName>
            </value>
            <value>
                <fullName>1996</fullName>
            </value>
            <value>
                <fullName>1997</fullName>
            </value>
            <value>
                <fullName>1BA1</fullName>
            </value>
            <value>
                <fullName>1BAV</fullName>
            </value>
            <value>
                <fullName>1BMT</fullName>
            </value>
            <value>
                <fullName>1BTP</fullName>
            </value>
            <value>
                <fullName>2BMT</fullName>
            </value>
            <value>
                <fullName>3BMT</fullName>
            </value>
            <value>
                <fullName>711A</fullName>
            </value>
            <value>
                <fullName>711B</fullName>
            </value>
            <value>
                <fullName>AAL1</fullName>
            </value>
            <value>
                <fullName>AAL2</fullName>
            </value>
            <value>
                <fullName>ACC1</fullName>
            </value>
            <value>
                <fullName>ACC3</fullName>
            </value>
            <value>
                <fullName>ACCA</fullName>
            </value>
            <value>
                <fullName>ACCP</fullName>
            </value>
            <value>
                <fullName>ACS1</fullName>
            </value>
            <value>
                <fullName>ACS3</fullName>
            </value>
            <value>
                <fullName>ADDM</fullName>
            </value>
            <value>
                <fullName>AFDV</fullName>
            </value>
            <value>
                <fullName>AFFD</fullName>
            </value>
            <value>
                <fullName>AFFX</fullName>
            </value>
            <value>
                <fullName>AGMT</fullName>
            </value>
            <value>
                <fullName>AGRE</fullName>
            </value>
            <value>
                <fullName>ALCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>