force-app/main/default/objects/Custodial_Exception__c/fields/Exception_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Exception_Assigned_Date__c</fullName>
    <label>Exception Assigned Date</label>
    <type>Date</type>
</CustomField>