force-app/main/default/objects/Custodial_Exception__c/fields/Exception_Code__c.field-meta.xml
<CustomField>
    <fullName>Exception_Code__c</fullName>
    <description>This is the four-digit code in column T of the spreadsheet</description>
    <inlineHelpText>This is the four-digit code in column T of the spreadsheet</inlineHelpText>
    <label>Exception Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>