force-app/main/default/objects/Custodial_Exception__c/fields/Exception_Description__c.field-meta.xml
<CustomField>
    <fullName>Exception_Description__c</fullName>
    <label>Exception Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>