force-app/main/default/objects/Custodial_Exception__c/fields/Exception_Status_Custodian__c.field-meta.xml
<CustomField>
    <fullName>Exception_Status_Custodian__c</fullName>
    <description>“Pending” if the bank is still including in the feed; “Resolved” if bank has removed it from the feed</description>
    <inlineHelpText>“Pending” if the bank is still including in the feed; “Resolved” if bank has removed it from the feed</inlineHelpText>
    <label>Exception Status Custodian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>