force-app/main/default/objects/Custodial_Exception__c/fields/Exception_Status_Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>Exception_Status_Date_Updated__c</fullName>
    <label>Exception Status Date Updated</label>
    <type>Date</type>
</CustomField>