force-app/main/default/objects/Custodial_Exception__c/fields/Exception_Status_Internal__c.field-meta.xml
<CustomField>
    <fullName>Exception_Status_Internal__c</fullName>
    <description>“Pending” if Post-Closing team is still working on exception; “Resolved” if Post-Closing team has resolved exception</description>
    <inlineHelpText>“Pending” if Post-Closing team is still working on exception; “Resolved” if Post-Closing team has resolved exception</inlineHelpText>
    <label>Exception Status Internal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>PIF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>