force-app/main/default/objects/Custodial_Exception__c/fields/Exception_UID__c.field-meta.xml
<CustomField>
    <fullName>Exception_UID__c</fullName>
    <label>Exception UID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>