force-app/main/default/objects/Custodial_Exception__c/fields/Internal_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Status_Notes__c</fullName>
    <label>Internal Status Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>