force-app/main/default/objects/Custodial_Exception__c/fields/Is_Fatal_Exception__c.field-meta.xml
<CustomField>
    <fullName>Is_Fatal_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if [Fatal Exception]=”Y”, otherwise False</description>
    <inlineHelpText>True if [Fatal Exception]=”Y”, otherwise False</inlineHelpText>
    <label>Is Fatal Exception</label>
    <type>Checkbox</type>
</CustomField>