force-app/main/default/objects/Custodial_Exception__c/fields/Latest_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Latest_File_Name__c</fullName>
    <label>Latest File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>