force-app/main/default/objects/Custodial_Exception__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Custodial Exceptions</relationshipLabel>
    <relationshipName>Custodial_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>