force-app/main/default/objects/Custodial_Exception__c/fields/WF_UID__c.field-meta.xml
<CustomField>
    <fullName>WF_UID__c</fullName>
    <label>WF UID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>